Do QVideoFrame to QImage conversion using shaders

Use existing shaders to do format conversion, in order to reduce
overall CPU use, rendering the frame in an offscreen texture that
is read back and used to generate a QImage.

Task-number: QTBUG-99969
Change-Id: Iaae9acb573c49e81c177dbcb6c1ec4d3a9cab89d
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Piotr Srebrny <piotr.srebrny@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>